# learn-opengl

./: .gitignore  CMakeLists.txt
include/glad/: glad.h
src/: file.cpp  file.h  file_test.cpp  file_test.h  glad.c  main.cc  main.cpp  shader.cpp  shader.h  shared.cpp  shared.h  two_triangles.cpp
